--- a/src/server/index.html
+++ b/src/server/index.html
@@ -5,6 +5,9 @@
     </title>
   </head>
   <body>
-    <a href="canvas.html?app=TestApp">Test application</a>
+    <ul>
+      <li><a href="canvas.html?app=kcalc">Calculator</a></li>
+      <li><a href="canvas.html?app=testapp">Test application</a></li>
+    </ul>
   </body>
 </html>
