ImagesHostServer port in canvas script

--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -274,6 +274,7 @@ function debug(msg) {
 
 var sessionID = '[PUT_SESSION_ID_HERE]';
 var portNumber = [PUT_PORT_NUMBER_HERE];
+var imagesHostPortNumber = [PUT_IMG_SRV_PORT_NUMBER_HERE];
 var verbose = false;
 
 var widgetsContainer = $('#widgets');
