--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -344,7 +344,8 @@ QtLogic.prototype = {
             if (d.command == 'draw') {
                 $.each(d.render, function (_, r) {
                     if (r.t == 'image') {
-                        var imgUrl = window.location.hostname + ":" + imagesHostPortNumber + "/" + r.data;
+                        r.data =  "http://" + window.location.hostname + ":" + imagesHostPortNumber + "/" + r.data;
+                        var imgUrl = r.data;
                         images_data.push(imgUrl);
                     }
                 });
@@ -356,8 +357,9 @@ QtLogic.prototype = {
         var delayer = delayCallback(images_data.length, callback);
         $.each(images_data, function (_, img) {
             var image = new Image();
-            image.src = img;
             image.onload = delayer;
+            image.onerror = delayer;
+            image.src = img;
         });
     },
     input:function (data) {
