--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8">
 <title>
     Websocket client test
 </title>
@@ -132,7 +133,7 @@
 <script type="text/javascript" src="http://jedrychowski.org/jquery-ui/js/jquery-ui-1.8.23.custom.min.js"></script>
 <style type="text/css" src="http://jedrychowski.org/jquery-ui/css/ui-lightness/jquery-ui-1.8.23.custom.css"></style>
 
-<script type="text/javascript">
+<script type="text/javascript" charset="utf-8">
 var delayCallback = function (num, callback) {
     function finished() {
         num -= 1;
@@ -1072,7 +1073,7 @@ CanvasDrawer.prototype = {
         ctx.font = '9pt Helvetica';
         var fillOld = ctx.strokeStyle;
         ctx.fillStyle = ctx.strokeStyle;
-        ctx.fillText(fdata.text, fdata.x, fdata.y);
+        ctx.fillText(CanvasHelper.decodeUtf8(fdata.text), fdata.x, fdata.y);
         ctx.fillStyle = fillOld;
     },
     drawLine:function (data) {
@@ -1229,6 +1230,52 @@ CanvasHelper.createGradient = function (ctx, gradient, style) {
         });
         return lingrad;
     }
+};
+
+CanvasHelper.encodeUtf8 = function (string) {
+    string = string.replace(/\r\n/g,"\n");
+    var utftext = "";
+    for (var n = 0; n < string.length; n++) {
+        var c = string.charCodeAt(n);
+        if (c < 128) {
+            utftext += String.fromCharCode(c);
+        }
+        else if((c > 127) && (c < 2048)) {
+            utftext += String.fromCharCode((c >> 6) | 192);
+            utftext += String.fromCharCode((c & 63) | 128);
+        }
+        else {
+            utftext += String.fromCharCode((c >> 12) | 224);
+            utftext += String.fromCharCode(((c >> 6) & 63) | 128);
+            utftext += String.fromCharCode((c & 63) | 128);
+        }
+    }
+    return utftext;
+};
+
+CanvasHelper.decodeUtf8 = function (utftext) {
+    var string = "";
+    var i = 0;
+    var c = c1 = c2 = 0;
+    while ( i < utftext.length ) {
+        c = utftext.charCodeAt(i);
+        if (c < 128) {
+            string += String.fromCharCode(c);
+            i++;
+        }
+        else if((c > 191) && (c < 224)) {
+            c2 = utftext.charCodeAt(i+1);
+            string += String.fromCharCode(((c & 31) << 6) | (c2 & 63));
+            i += 2;
+        }
+        else {
+            c2 = utftext.charCodeAt(i+1);
+            c3 = utftext.charCodeAt(i+2);
+            string += String.fromCharCode(((c & 15) << 12) | ((c2 & 63) << 6) | (c3 & 63));
+            i += 3;
+        }
+    }
+    return string;
 };
 
 function init() {
